[package]
name = "flawz"
version = "0.1.0"
description = "A Terminal UI for browsing CVEs"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/flawz"
repository = "https://github.com/orhun/flawz"
keywords = ["cve", "nvd", "tui", "flaw", "security", "vulnerability"]
categories = ["command-line-utilities"]
edition = "2021"

[dependencies]
nvd_cve = "0.2.0"
ratatui = "0.26.0"
crossterm = "0.27.0"
thiserror = "1.0.60"
textwrap = "0.16.1"
tui-input = "0.8.0"
tui-popup = "0.3.1"
clap = { version = "4.5.4", features = ["derive", "env", "wrap_help", "cargo"] }
