[package]
name = "flawz"
version = "0.1.1"
description = "A Terminal UI for browsing CVEs"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/flawz"
repository = "https://github.com/orhun/flawz"
keywords = ["cve", "nvd", "tui", "flaw", "security"]
categories = ["command-line-utilities"]
edition = "2021"
rust-version = "1.74.1"
default-run = "flawz"

[[bin]]
name = "flawz-completions"
path = "src/bin/completions.rs"

[[bin]]
name = "flawz-mangen"
path = "src/bin/mangen.rs"

[dependencies]
nvd_cve = "0.2.0"
ratatui = "0.26.0"
crossterm = "0.27.0"
thiserror = "1.0.60"
textwrap = "0.16.1"
tui-input = "0.8.0"
tui-popup = "0.3.1"
clap = { version = "4.5.4", features = ["derive", "env", "wrap_help", "cargo"] }
clap_complete = "4.5.2"
clap_mangen = "0.2.20"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.14.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = [
  "aarch64-apple-darwin",
  "x86_64-apple-darwin",
  "x86_64-pc-windows-msvc",
]
# Publish jobs to run in CI
pr-run-mode = "upload"
# Whether to install an updater program
install-updater = false
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci", "msi"]

[package.metadata.wix]
upgrade-guid = "539E614D-3F40-47C9-98FE-56485078BA84"
path-guid = "27678D15-7FAC-4994-A1E3-F8DED86C94FE"
license = false
eula = false
