[package]
name = "flawz"
version = "0.4.0"
description = "A Terminal UI for browsing CVEs"
authors = ["Orhun Parmaksız <orhunparmaksiz@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/orhun/flawz"
repository = "https://github.com/orhun/flawz"
keywords = ["cve", "nvd", "tui", "flaw", "security"]
categories = ["command-line-utilities"]
edition = "2024"
rust-version = "1.88.0"
default-run = "flawz"

[[bin]]
name = "flawz-completions"
path = "src/bin/completions.rs"

[[bin]]
name = "flawz-mangen"
path = "src/bin/mangen.rs"

[dependencies]
nvd_cve = "0.3.0"
ratatui = "0.30.1"
thiserror = "2.0.18"
textwrap = "0.16.2"
tui-input = "0.15.3"
tui-popup = "0.7.5"
clap = { version = "4.6.1", features = ["derive", "env", "wrap_help", "cargo"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
webbrowser = "1.2.1"
itertools = "0.14.0"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1
strip = true

[profile.bench]
opt-level = 3
debug = false

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.32.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "msi"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc"]
# Which actions to run on pull requests
pr-run-mode = "upload"
# Whether to install an updater program
install-updater = false
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["msi"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"

[package.metadata.wix]
upgrade-guid = "539E614D-3F40-47C9-98FE-56485078BA84"
path-guid = "27678D15-7FAC-4994-A1E3-F8DED86C94FE"
license = false
eula = false
